--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,16 @@ body{
 ::-webkit-scrollbar{
     display: none;
 }
-h1,
+h1
+{
+    font-family: Heading-font;
+}
 h2,
 h3,
 h4,
 h5,
 h6{
-    font-family: Heading-font;
+    font-family: text-font;
 }
 p ,a{
     font-family: text-font;
@@ -117,3 +120,43 @@ main h1{
     border-bottom: 2px solid #c81d25;
 
 }
+.app__intro{
+    margin-top: 20vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #000000;
+    background-image: 
+        radial-gradient(at 32% 56%, #340000 0, transparent 59%), 
+        radial-gradient(at 82% 65%, rgb(11, 0, 49) 0, transparent 55%);
+    
+    /* background: linear-gradient(-45deg, rgb(49, 1, 1), rgb(3, 1, 50)); */
+    padding: 8vh 10vw;
+}
+.app__intro h2{
+    color: #fff;
+    font-size: 5vh;
+}
+.app__intro-container{
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(19, 19, 19, 0.595);
+    border-radius: 12px;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    padding: 4vh 6vh;
+    margin-top: 6vh;
+    display: flex;
+    flex-direction: column;
+    gap: 4vh;
+}
+.text-container{
+    padding: 0 2vw;
+    margin-top: vh;
+}
+.app__intro-container p{
+    color: #fff;
+    
+}
+
