--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,21 @@
     padding: 0;
     
 }
+:root{
+    --primary-color: #D65A31;
+    --cta-color: #EEEEEE;
+    --background-color: #1a1a1a;
+    --secondary-color: #393E46;
+
+}
 body{
-    background: rgb(4, 0, 13);
+    background: var(--background-color);
     box-sizing: border-box;
 }
 html{
     scroll-behavior: smooth;
 }
+
 @font-face {
     font-family: Regular-text;
     src: url(../fonts/Alliance-No-1-Regular.woff2);
@@ -19,9 +27,18 @@ html{
     font-family: Bold-text;
     src: url(../fonts/Alliance-No-1-ExtraBold.woff2);
 }
+
+@font-face {
+    font-family: CodePro-regular;
+    src: url(../fonts/Code\ Pro\ LC.otf);
+}
+@font-face {
+    font-family: CodePro-Bold;
+    src: url(../fonts/Code\ Pro\ Black\ LC.otf);
+}
 p, a{
-    font-family: Regular-text;
-    color: aliceblue;
+    font-family: CodePro-Regular;
+    color: var(--cta-color);
 }
 
 h1,
@@ -54,23 +71,60 @@ h6{
 .app__navbar-right a{
     color: aliceblue;
     text-decoration: none;
+    transition: all ease-in-out 0.2s;
 
+}
+.app__navbar-right a:hover{
+    text-decoration: underline;
+    color: var(--primary-color);
 }
 main{
     padding: 4vh 4vw;
     display: flex;
-    flex-direction: column;
     width: 100vw;
-    height: 70vh;
-    place-content: center;
-    align-items: center;
+    height: 80vh;
+    justify-content: space-between;
+    flex: 1;
 
 }
+.app__main-left{
+    display: flex;
+    flex-direction: column;
+    gap: 4vh;
+    padding-top: 14vh;
+}
+.app__main-left h1{
+    color: var(--cta-color);
+    font-size: 5vw;
 
-main h1{
-    background: -webkit-linear-gradient(45deg, rgb(4, 44, 112), rgb(1, 132, 112));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 7vw;
-    
+}
+.app__main-left .app__main-left-social{
+    display: flex;
+    justify-content: space-between;
+    width: 12vw;
+    margin-top: 6vh;
+
+}
+.app__main-left-social button{
+    display: flex;
+    padding: 1vh;
+    border-radius: 1vh;
+    background: var(--background-color);
+    box-shadow: 2px 2px 10px rgb(0, 0, 0),
+                -2px -2px 10px #545454b4 ;
+    border: none;
+    align-items: center;
+    place-content: center;
+    cursor: pointer;
+}
+.app__main-left-social img{
+    width: 2vw;
+}
+.app__main-right{
+    height: 70vh;
+    display: flex;
+    align-items: center;
+}
+.app__main-right img{
+    width: 40vw;
 }
