--- a/css/snehasish.css
+++ b/css/snehasish.css
@@ -8,7 +8,10 @@
 	 cursor: pointer;
 	 transition: 0.5s;
 }
- .card .card-image {
+.card-image {
+	 position: absolute;
+	 top: 0px;
+	 left: 0px;
 	 width: 100%;
 	 height: 100%;
 	 z-index: 2;
