--- a/css/snehasish.css
+++ b/css/snehasish.css
@@ -11,7 +11,7 @@
 	 cursor: pointer;
 	 transition: 0.5s;
 }
- .card .card-image {
+ .card .card-pic{
 	 position: absolute;
 	 top: 0px;
 	 left: 0px;
@@ -22,7 +22,7 @@
 	 transition: 0.5s;
 }
 
-.card-image img{
+.card-pic img{
 	object-fit: cover;
 }
 
@@ -30,12 +30,12 @@
 	 opacity: 0.4;
 	 transition: 0.5s;
 }
- .card:hover .card-image {
+ .card:hover .card-pic {
 	 transform: translateY(-100px);
 	 transition: all 0.9s;
 }
 
- .social-icons {
+ .socials {
 	 position: absolute;
 	 top: 50%;
 	 left: 50%;
@@ -44,10 +44,10 @@
 	 display: flex;
 
 }
- .social-icons li {
+ .socials li {
 	 list-style: none;
 }
- .social-icons li a {
+ .socials li a {
 	 position: relative;
 	 display: block;
 	 width: 50px;
@@ -68,21 +68,21 @@
 
 
 
- .card:hover .social-icons li a {
+ .card:hover .socials li a {
 	 transform: translateY(0px);
 	 opacity: 1;
 }
- .social-icons li a:hover {
+ .socials li a:hover {
 	 background: #000;
 	 transition: 0.2s;
 }
- .social-icons li a:hover .fab {
+ .socials li a:hover .fab {
 	 color: #fff;
 }
- .social-icons li a .fab {
+ .socials li a .fab {
 	 transition: 0.8s;
 }
- .social-icons li a .fab:hover {
+ .socials li a .fab:hover {
 	 transform: rotateY(360deg);
 	 color: #fff;
 }
@@ -97,7 +97,7 @@
 	 transition-delay: 0.3s;
 }
 
- .details {
+ .item {
 	 position: absolute;
 	 bottom: 0;
 	 left: 0;
@@ -107,12 +107,12 @@
 	 z-index: 1;
 	 padding: 10px;
 }
- .details h2 {
+ .item h2 {
 	 margin: 30px 0;
 	 padding: 0;
 	 text-align: center;
 }
- .details h2 .job-title {
+ .item h2 .job-title {
 	 font-size: 1rem;
 	 line-height: 2.5rem;
 	 color: #333;
@@ -130,7 +130,7 @@
 	 padding: 10px;
 	 transition: 0.4s;
 }
- .profile .social-icons li a {
+ .profile .socials li a {
 	 border-radius: 60%;
 }
  .card:hover .profile-img {
