--- a/css/snehasish.css
+++ b/css/snehasish.css
@@ -1,10 +1,7 @@
 
-.snehasishcard {
-	 position: absolute;
-	 top: 50%;
-	 left: 50%;
 
-.card {
+
+.snehashishcard {
 
 	 width: 300px;
 	 height: 350px;
