--- a/css/abhinav.css
+++ b/css/abhinav.css
@@ -49,6 +49,10 @@
     z-index: 2;
     transition: 0.5s;
     opacity: 0.9;
+    
+}
+.card-image img{
+    object-fit: fill;
 }
 .card:hover img {
     
