--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ main{
     align-items: center;
     gap: 2vh;
     padding: 2vh;
-    width: 17vw;
+    max-width: 17vw;
     border-radius: 2vh;
     background: var(--background-color);
     box-shadow: 2px 2px 10px #000000,
@@ -216,7 +216,7 @@ main{
     width: 1.5vw;
 }
 .userImg{
-    width: 15vw;
+    max-width: 15vw;
 }
 
 footer{
